--- a/css/index.css
+++ b/css/index.css
@@ -95,10 +95,10 @@ html {
 .header {
     padding: 30px;
     height: 100px;
-    position: static;
     z-index: 3;
-    position: sticky;
+    position: fixed;
     top: -20px;
+    width: 100%;
 }
 
 .header .container {
@@ -124,10 +124,6 @@ html {
 .header .logo span {
     font-weight: 600;
     letter-spacing: 0;
-}
-
-nav .links {
-    position: relative;
 }
 
 nav ul {
@@ -183,9 +179,10 @@ nav ul .eve::after {
     border-style: solid;
     border-color: white transparent transparent transparent;
     position: absolute;
-    right: -17px;
-    top: 17px;
+    right: -5px;
+    top: 13px;
     transition: 0.3s;
+    transform: rotate(90deg);
 }
 
 nav ul li ul {
@@ -231,7 +228,7 @@ nav ul li ul li:hover a {
 }
 
 nav ul .eve:hover::after {
-    transform: rotate(90deg);
+    transform: rotate(0deg);
     right: -7px;
     top: 15px;
 }
@@ -262,7 +259,7 @@ nav li a {
     padding: 8px 20px;
     border-radius: 7px;
     font-weight: bold;
-    background-color: #1640D6;
+    background-color: #1640d6;
     /* border-color: transparent; */
     border: 1px solid black;
     color: white;
@@ -280,18 +277,19 @@ nav li a {
     left: 20px;
     top: 9px;
     z-index: -1;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .header .bt1:hover {
     background-color: white;
-    border-color: #1640D6;
+    border-color: #1640d6;
     color: black;
     cursor: pointer;
 }
+
 .header button:hover::before {
     cursor: default;
-    transform: translate(10px,5px);
+    transform: translate(10px, 5px);
     z-index: -2;
 }
 
@@ -314,9 +312,13 @@ nav .icon span {
     nav ul a {
         font-size: 17px;
     }
+
+    .header .container {
+        width: 90%;
+    }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 855px) {
     .header .logo {
         font-size: 27px;
     }
@@ -325,16 +327,20 @@ nav .icon span {
         display: none;
     }
 
-    nav ul {
-        display: none;
+    nav .links ul {
         position: absolute;
-        /* flex-direction: column; */
-        right: -40px;
-        top: 40px;
-        min-width: 150px;
-        column-gap: 10px;
-        padding: 0;
-        border-radius: 0 5px 0 0;
+        top: 105%;
+        left: 110%;
+        width: 100%;
+        /* transform: translateX(110%); */
+        height: calc(100vh - 100px);
+        display: block;
+        text-align: center;
+        padding-top: 2rem;
+        background-color: var(--secondary-color);
+        transition: transform 1s;
+        padding-left: 0;
+        border-radius: 8px;
     }
 
     nav ul::before {
@@ -347,11 +353,33 @@ nav .icon span {
         right: 0;
     }
 
-    nav .links:hover ul {
-        display: flex;
+    /* OVERLAY */
+    .overlay {
+        position: fixed;
+        display: none;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: black;
+        opacity: 0.8;
+        height: 100vh;
     }
 
-    nav .links:hover ul li ul {
+    .overlay.show {
+        display: block;
+    }
+
+    /*  */
+    nav .links.active ul {
+        transform: translateX(-114%);
+    }
+
+    nav ul .eve {
+        margin: 0;
+        padding-bottom: 1rem;
+    }
+
+    nav .links.active ul li ul {
         display: none;
     }
 
@@ -360,7 +388,7 @@ nav .icon span {
     }
 
     nav li {
-        padding: 0;
+        padding-bottom: 1rem;
     }
 
     nav li a {
@@ -374,21 +402,27 @@ nav .icon span {
 
     nav .icon {
         display: flex;
+        margin-right: 6px;
+        padding: 1rem;
+        box-sizing: content-box;
     }
 
     nav .icon span {
         transition: 0.5s;
     }
 
-    nav .icon:hover span:nth-child(1) {
+    /* nav .icon:hover span:nth-child(1), */
+    nav .links.active .icon span:nth-child(1) {
         transform: rotate(45deg) translateY(10px);
     }
 
-    nav .icon:hover span:nth-child(2) {
+    /* nav .icon:hover span:nth-child(2), */
+    nav .links.active .icon span:nth-child(2) {
         opacity: 0;
     }
 
-    nav .icon:hover span:nth-child(3) {
+    /* nav .icon:hover span:nth-child(3), */
+    nav .links.active .icon span:nth-child(3) {
         transform: rotate(-45deg) translateY(-10px);
     }
 }
@@ -405,6 +439,11 @@ nav .icon span {
         top: 40px;
         min-width: 150px;
         column-gap: 0px;
+    }
+    nav .links ul {
+    }
+    .header .container{
+        width: 100%;
     }
 }
 
@@ -818,7 +857,7 @@ transform:rotate(360deg); */
     padding: 8px 20px;
     border-radius: 7px;
     font-weight: bold;
-    background-color: #1640D6;
+    background-color: #1640d6;
     border: 1px solid black;
     color: white;
     transition-duration: 0.3s;
@@ -835,18 +874,19 @@ transform:rotate(360deg); */
     left: 25px;
     top: 9px;
     z-index: -1;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .announce .bt1:hover {
     background-color: white;
-    border-color: #1640D6;
+    border-color: #1640d6;
     color: black;
     cursor: pointer;
 }
+
 .announce button:hover::before {
     cursor: default;
-    transform: translate(10px,5px);
+    transform: translate(10px, 5px);
     z-index: -2;
 }
 
@@ -961,7 +1001,7 @@ transform:rotate(360deg); */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 5;
+    z-index: 1;
 }
 
 .event-details-container .title {
@@ -974,6 +1014,8 @@ transform:rotate(360deg); */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 2rem;
+    
+    text-align: left;
 }
 
 .event-details-container .details {
@@ -1013,8 +1055,8 @@ transform:rotate(360deg); */
     border-radius: 5px;
     color: rgb(6, 135, 255);
     font-family: "Roboto", Courier, monospace;
-    font-weight: 700;
-    font-size: 30px;
+    font-weight: 800;
+    font-size: 32px;
     cursor: default;
 }
 
@@ -1111,6 +1153,7 @@ transform:rotate(360deg); */
 .slider .slide img {
     width: 600px;
     height: 100%;
+    object-fit: cover;
 }
 
 @media only screen and (max-width: 862px) {
@@ -1137,3 +1180,206 @@ transform:rotate(360deg); */
 }
 
 /* End Events Section */
+/* Start Footer Section */
+.footer{
+    margin-top: 300px;
+}
+.footer .content{
+    width: 100%;
+    /* height: 40vh; */
+    background-color: var(--secondary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.footer .subscirbe{
+    background-color: #f2ecec;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    border-radius: 5px;
+    position: absolute;
+    top: -100px;
+}
+.footer .subscirbe p{
+    font-size: 40px;
+    font-weight: 600;
+    padding: 30px 30px;
+    max-width: 400px;
+    color: black;
+    text-align: left;
+}
+.footer .subscirbe:hover p{
+    background: -webkit-linear-gradient(330deg, #1580c8, #7ac0d0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.footer .subscirbe .sec{
+    padding-right: 40px;
+    display: flex;
+    position: relative;
+}
+.footer .subscirbe .sec input{
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    font-weight: 400;
+    color: #93a1a2;
+    padding: 0 30px;
+    padding-right: 100px;
+    background-color: white;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    border: 0;
+}
+.footer .subscirbe .sec .btn{
+    height: 60px;
+    min-width: 160px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+    border: 0;
+    background-color: #007bff;
+    color: white;
+    font-weight: 300;
+    transition: .4s;
+}
+.footer .subscirbe .sec .btn:hover{
+    cursor: pointer;
+    background-color: var(--secondary-color);
+}
+.footer .logo{
+    margin: 160px 0 30px 0;
+    width: 250px;
+}
+.footer .logo img{
+    max-width:100% ;
+}
+.footer .links ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+}
+
+.footer .links ul li {
+    margin: 0 25px;
+}
+
+.footer .links li a {
+    position: relative;
+    display: block;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.footer .links li a:hover {
+    color: #bbaeae;
+}
+
+.footer .links li a::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    bottom: -8px;
+    left: 0;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+.footer .links li a:hover::after {
+    width: 100%;
+}
+.footer .line{
+    background-color: #8c89895b;
+    width: 70%;
+    height: 1px;
+    margin: 40px 0;
+}
+.footer .social{
+    width: 15%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.footer .ico{
+    color: white;
+    font-size: 20px;
+    opacity: .7;
+    transition: .4s;
+}
+.footer .ico:hover{
+    background: -webkit-linear-gradient(330deg, #1580c8, #7ac0d0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 1;
+    transform: scale(1.25);
+}
+@media (max-width:1150px){
+    .footer .subscirbe p{
+        font-size: 35px;
+        padding: 20px;
+        max-width: 300px;
+    }
+    .footer .subscirbe .sec input{
+        padding-right: 50px;
+    }
+    .footer .logo{
+        margin-top: 130px;
+    }
+}
+@media (max-width:991px){
+    .footer .subscirbe{
+        flex-direction: column;
+        
+    }
+    .footer .subscirbe p{
+        font-size: 40px;
+        padding: 20px;
+        max-width: 400px;
+    }
+    .footer .subscirbe .sec{
+        padding: 0 30px 30px;
+    }
+    .footer .logo{
+        margin-top: 230px;
+    }
+}
+@media (max-width:767px){
+    .footer .subscirbe p{
+        font-size: 35px;
+        padding: 5px;
+        max-width: 250px;
+    }
+    .footer .subscirbe .sec{
+        padding: 0 30px 30px;
+        flex-direction: column;
+        row-gap: 6px;
+    }
+    .footer .subscirbe .sec input{
+        border-radius: 5px;
+    }
+    .footer .subscirbe .sec .btn{
+        border-radius: 5px;
+    }
+    .footer .logo{
+        margin-top: 280px;
+    }
+    .footer .links ul li {
+        margin: 0 5px;
+    }
+    .footer .links ul li a{
+        font-size: 18px;
+    }
+    .footer .line{
+        width: 80%;
+    }
+}
+/* End Footer Section */
