--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,12 @@ html {
     margin-right: auto;
 }
 
+.separator {
+    border-top: 1px solid #ccc;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
 /* Small */
 @media (min-width: 768px) {
     .container {
@@ -70,6 +76,10 @@ html {
     .special-heading h2 {
         font-size: 35px;
     }
+}
+
+body {
+    background-image: url("../imgs/Screenshot\ 2024-03-07\ 171452.png");
 }
 
 /* End Components */
@@ -363,6 +373,7 @@ nav .icon span {
         background-color: black;
         opacity: 0.8;
         height: 100vh;
+        z-index: 2;
     }
 
     .overlay.show {
@@ -440,9 +451,10 @@ nav .icon span {
         min-width: 150px;
         column-gap: 0px;
     }
-    nav .links ul {
-    }
-    .header .container{
+
+    nav .links ul {}
+
+    .header .container {
         width: 100%;
     }
 }
@@ -515,11 +527,29 @@ nav .icon span {
 /* Start about Section */
 
 .yasmeen_container1 {
-    padding: 0px 30px;
+    padding: 0px 40px;
     display: flex;
     flex-direction: column;
+
+    /* height: 50vh; */
     align-items: center;
     justify-content: center;
+}
+
+.yasmeen_title {
+    text-align: center;
+}
+
+.ytitle {
+    font-weight: bold;
+    font-size: 50px;
+    color: rgb(87, 124, 216);
+}
+
+.ysubtitle {
+    color: gray;
+    letter-spacing: 2px;
+    margin-top: -15px;
 }
 
 .ysubtitlemobile {
@@ -545,10 +575,9 @@ nav .icon span {
 }
 
 .yicons li {
-    height: 165px;
-    min-width: 165px;
+    height: 175px;
+    width: 175px;
     padding: 0px 5px;
-    margin: 0 5px;
     /* background-color: red; */
     border: dashed 3px rgb(87, 124, 216);
     border-radius: 50%;
@@ -577,6 +606,7 @@ nav .icon span {
 .yasmeen_icons {
     width: 100%;
     /* background-color: aqua; */
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -611,7 +641,7 @@ transform:rotate(360deg); */
 
 .filter img {
     width: 95%;
-    height: 450px;
+    height: 400px;
     filter: grayscale(1);
     /* transition: all 1s ease; */
 
@@ -630,13 +660,14 @@ transform:rotate(360deg); */
 }
 
 .headhide p {
-    font-size: 25px;
-
+    font-size: 20px;
+    margin-bottom: 0;
     width: auto;
 }
 
 .filter {
     position: relative;
+    margin-bottom: 1rem;
 }
 
 .headhide {
@@ -683,12 +714,12 @@ transform:rotate(360deg); */
 }
 
 /* .shapetri{
-    position: absolute;
-    left: 240px;
-    top: 15%;
-    z-index: -1;
-    
-    animation: round-01 5s linear infinite;
+   position: absolute;
+   left: 240px;
+   top: 15%;
+   z-index: -1;
+   
+   animation: round-01 5s linear infinite;
 } */
 @keyframes round-01 {
     0% {
@@ -706,10 +737,10 @@ transform:rotate(360deg); */
 
 .shapelines {
     /* position: absolute;
-    right: 10px;
-    bottom: 30%;
-    z-index: -1;
-    animation: round-01 5s linear infinite; */
+   right: 10px;
+   bottom: 30%;
+   z-index: -1;
+   animation: round-01 5s linear infinite; */
     display: none;
 }
 
@@ -805,6 +836,36 @@ transform:rotate(360deg); */
 
     .yicons li {
         margin: 0px 10px;
+    }
+
+    .shapecross {
+        top: 6%;
+        right: 7%;
+    }
+
+    .filterul {
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: center;
+        /* background-color: red; */
+        margin: 0px;
+        justify-content: space-around;
+        padding: 0px;
+    }
+
+    .yasmeen-heads {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .yhide {
+        display: none;
+    }
+
+    .ysubtitlemobile {
+        display: block;
     }
 }
 
@@ -1014,7 +1075,7 @@ transform:rotate(360deg); */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 2rem;
-    
+
     text-align: left;
 }
 
@@ -1179,8 +1240,7 @@ transform:rotate(360deg); */
     }
 }
 
-
-.moataz_container{
+.moataz_container {
     width: 100%;
     display: flex;
     position: relative;
@@ -1191,21 +1251,25 @@ transform:rotate(360deg); */
     padding-top: 90px;
     padding-bottom: 90px;
 }
-.moataz_container .event{
+
+.moataz_container .event {
     min-width: 200px;
 }
-.one{
+
+.one {
     text-wrap: nowrap;
     margin-bottom: 60px;
     padding: 10px;
 }
-.one > span{
+
+.one>span {
     font-size: 48px;
     font-family: "Archivo", sans-serif;
     font-weight: 700;
     line-height: 60px;
 }
-.row{
+
+.row {
     box-sizing: border-box;
     /* width: 1000px; */
     position: relative;
@@ -1217,7 +1281,8 @@ transform:rotate(360deg); */
     column-gap: 10px;
     flex: 1;
 }
-.row > div{
+
+.row>div {
     width: 23%;
     border: 1px solid transparent;
     border-radius: 4px;
@@ -1226,11 +1291,13 @@ transform:rotate(360deg); */
     height: 270px;
     overflow: hidden;
 }
-img{
+
+.moataz_container img {
     width: 100%;
     border-radius: 4px;
 }
-.circle{
+
+.circle {
     position: absolute;
     top: 15px;
     left: 15px;
@@ -1244,18 +1311,21 @@ img{
     padding: 6px;
     font-size: 10px;
 }
-.circle > span > span{
+
+.circle>span>span {
     font-size: 20px;
     font-family: "Archivo", sans-serif;
     font-weight: 700;
     line-height: 15px;
 }
-.mocontent{
+
+.mocontent {
     height: 80px;
     min-width: none;
     /* position: relative; */
 }
-.mocontent > .art{
+
+.mocontent>.art {
     position: absolute;
     left: 14px;
     top: 140px;
@@ -1268,10 +1338,12 @@ img{
     border-radius: 4px;
     font-family: "Archivo", sans-serif;
 }
-.link_loc{
+
+.link_loc {
     margin-top: 20px;
 }
-.link_loc > h3 > a{
+
+.link_loc>h3>a {
     margin-left: 14px;
     text-wrap: wrap;
     color: inherit;
@@ -1279,33 +1351,38 @@ img{
     line-height: inherit;
     text-decoration: none;
 }
-h3:hover{
+
+h3:hover {
     color: #fc097c;
 }
-.link_loc > div > p{
+
+.link_loc>div>p {
     font-size: 13px;
     line-height: 12px;
-
 }
-.link_loc div{
+
+.link_loc div {
     margin-top: 10px;
     margin-left: 14px;
     display: flex;
     gap: 7px;
 }
-.row>div:hover{
-    img{
+
+.row>div:hover {
+    img {
         transform: scale(1.05);
         transition-duration: 0.7s;
     }
 }
-.three{
+
+.three {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
 }
-.three > button{
+
+.three>button {
     position: absolute;
     background: #fc097c;
     border: transparent solid;
@@ -1320,57 +1397,67 @@ h3:hover{
     transition: all 0.3s ease 0s;
     cursor: pointer;
 }
+
 /* button:hover{
-    background-color: #fff;
-    color: #fc097c;
+  background-color: #fff;
+  color: #fc097c;
 } */
-@media screen and (min-width:450px) and (max-width:750px){
-    .row{
+@media screen and (min-width: 450px) and (max-width: 750px) {
+    .row {
         /* flex: 49%; */
         flex-wrap: wrap;
         max-width: 1000px;
         min-width: 200px;
     }
-    .row>div{
+
+    .row>div {
         min-width: 300px;
         height: 240px;
     }
-    .content{
+
+    .content {
         position: relative;
     }
-    .content > .art{
+
+    .content>.art {
         top: -35px;
     }
+
     /* button{
-        left: 320px;
-        width: 400px;
-        font-size: 20px;
-        margin-bottom: 50px;
-    } */
+      left: 320px;
+      width: 400px;
+      font-size: 20px;
+      margin-bottom: 50px;
+  } */
 }
 
-@media screen and (max-width: 450px){
-    .one>span{
+@media screen and (max-width: 450px) {
+    .one>span {
         font-size: 33px;
     }
-    .row{
+
+    .row {
         flex: 100%;
         flex-wrap: wrap;
         max-width: 300px;
         /* width: 80%; */
         margin: 0px 30px;
     }
-    .row>div{
+
+    .row>div {
         width: 100%;
         height: 300px;
     }
-    .mocontent{
+
+    .mocontent {
         position: relative;
     }
-    .mocontent > .art{
+
+    .mocontent>.art {
         top: -35px;
     }
-    button{
+
+    button {
         bottom: 10px;
     }
 }
@@ -1378,7 +1465,7 @@ h3:hover{
 /* End Events Section */
 /* Start Footer Section */
 
-.footer .content{
+.footer .content {
     width: 100%;
     /* height: 40vh; */
     background-color: var(--secondary-color);
@@ -1388,7 +1475,8 @@ h3:hover{
     position: relative;
     margin-top: 100px;
 }
-.footer .subscirbe{
+
+.footer .subscirbe {
     background-color: #f2ecec;
     text-align: center;
     display: flex;
@@ -1399,7 +1487,8 @@ h3:hover{
     position: absolute;
     top: -100px;
 }
-.footer .subscirbe p{
+
+.footer .subscirbe p {
     font-size: 40px;
     font-weight: 600;
     padding: 30px 30px;
@@ -1407,17 +1496,20 @@ h3:hover{
     color: black;
     text-align: left;
 }
-.footer .subscirbe:hover p{
+
+.footer .subscirbe:hover p {
     background: -webkit-linear-gradient(330deg, #1580c8, #7ac0d0);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.footer .subscirbe .sec{
+
+.footer .subscirbe .sec {
     padding-right: 40px;
     display: flex;
     position: relative;
 }
-.footer .subscirbe .sec input{
+
+.footer .subscirbe .sec input {
     width: 100%;
     height: 60px;
     font-size: 18px;
@@ -1430,7 +1522,8 @@ h3:hover{
     border-top-left-radius: 5px;
     border: 0;
 }
-.footer .subscirbe .sec .btn{
+
+.footer .subscirbe .sec .btn {
     height: 60px;
     min-width: 160px;
     border-bottom-right-radius: 5px;
@@ -1439,19 +1532,23 @@ h3:hover{
     background-color: #007bff;
     color: white;
     font-weight: 300;
-    transition: .4s;
+    transition: 0.4s;
 }
-.footer .subscirbe .sec .btn:hover{
+
+.footer .subscirbe .sec .btn:hover {
     cursor: pointer;
     background-color: var(--secondary-color);
 }
-.footer .logo{
+
+.footer .logo {
     margin: 160px 0 30px 0;
     width: 250px;
 }
-.footer .logo img{
-    max-width:100% ;
+
+.footer .logo img {
+    max-width: 100%;
 }
+
 .footer .links ul {
     list-style: none;
     display: flex;
@@ -1489,92 +1586,140 @@ h3:hover{
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
 }
+
 .footer .links li a:hover::after {
     width: 100%;
 }
-.footer .line{
+
+.footer .line {
     background-color: #8c89895b;
     width: 70%;
     height: 1px;
     margin: 40px 0;
 }
-.footer .social{
-    width: 15%;
+
+.footer .social {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    column-gap: 30px;
 }
-.footer .ico{
+
+.footer .ico {
     color: white;
     font-size: 20px;
-    opacity: .7;
-    transition: .4s;
+    opacity: 0.7;
+    transition: 0.4s;
 }
-.footer .ico:hover{
+
+.footer .ico:hover {
     background: -webkit-linear-gradient(330deg, #1580c8, #7ac0d0);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: 1;
     transform: scale(1.25);
 }
-@media (max-width:1150px){
-    .footer .subscirbe p{
+
+@media (max-width: 1150px) {
+    .footer .subscirbe p {
         font-size: 35px;
         padding: 20px;
         max-width: 300px;
     }
-    .footer .subscirbe .sec input{
+
+    .footer .subscirbe .sec input {
         padding-right: 50px;
     }
-    .footer .logo{
+
+    .footer .logo {
         margin-top: 130px;
     }
 }
-@media (max-width:991px){
-    .footer .subscirbe{
+
+@media (max-width: 991px) {
+    .footer .subscirbe {
         flex-direction: column;
-        
     }
-    .footer .subscirbe p{
+
+    .footer .subscirbe p {
         font-size: 40px;
         padding: 20px;
         max-width: 400px;
     }
-    .footer .subscirbe .sec{
+
+    .footer .subscirbe .sec {
         padding: 0 30px 30px;
     }
-    .footer .logo{
+
+    .footer .logo {
         margin-top: 230px;
     }
 }
-@media (max-width:767px){
-    .footer .subscirbe p{
+
+@media (max-width: 767px) {
+    .footer .subscirbe p {
         font-size: 35px;
         padding: 5px;
         max-width: 250px;
     }
-    .footer .subscirbe .sec{
+
+    .footer .subscirbe .sec {
         padding: 0 30px 30px;
         flex-direction: column;
         row-gap: 6px;
     }
-    .footer .subscirbe .sec input{
+
+    .footer .subscirbe .sec input {
         border-radius: 5px;
     }
-    .footer .subscirbe .sec .btn{
+
+    .footer .subscirbe .sec .btn {
         border-radius: 5px;
     }
-    .footer .logo{
+
+    .footer .logo {
         margin-top: 280px;
     }
+
     .footer .links ul li {
         margin: 0 5px;
     }
-    .footer .links ul li a{
+
+    .footer .links ul li a {
         font-size: 18px;
     }
-    .footer .line{
+
+    .footer .line {
         width: 80%;
     }
 }
+
+@media (max-width: 480px) {
+    .footer .subscirbe p {
+        font-size: 30px;
+        padding: 5px;
+    }
+
+    .footer .subscirbe .sec {
+        padding: 0 15px 15px;
+    }
+
+    .footer .subscirbe .sec input {
+        height: 50px;
+    }
+
+    .footer .subscirbe .sec .btn {
+        height: 50px;
+    }
+
+    .footer .logo {
+        margin-top: 210px;
+    }
+
+    .footer .links ul li a {
+        font-size: 16px;
+    }
+
+}
+
 /* End Footer Section */
