--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ body {
 /* End Components */
 /* Header section */
 .bigheader {
-    background-image: url(/imgs/back2.png);
+    background-image: url(../imgs/back2.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -871,6 +871,9 @@ transform:rotate(360deg); */
 
 /* End about Section */
 /* Start Announce Section */
+.announce{
+    margin-top: 70px;
+}
 .announce .content {
     display: flex;
     justify-content: space-between;
@@ -1249,7 +1252,7 @@ transform:rotate(360deg); */
     justify-content: center;
     align-items: center;
     padding-top: 90px;
-    padding-bottom: 90px;
+    padding-bottom: 40px;
 }
 
 .moataz_container .event {
@@ -1463,6 +1466,38 @@ h3:hover {
 }
 
 /* End Events Section */
+/* start Sponsers Section */
+.sponsers .content{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(130px,1fr));
+    gap: 30px;
+    margin-bottom: 200px;
+}
+.sponsers .sp{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sponsers .sp img{
+    max-width: 100%;
+    text-align: center;
+}
+.sponsers #blanco{
+    background-color: rgba(0, 0, 0, 0.797);
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;    
+}
+@media (min-width:767px){
+    .sponsers .content{
+        grid-template-columns: repeat(4,minmax(130px,1fr));
+    }
+}
+/* End Sponsers Section */
 /* Start Footer Section */
 
 .footer .content {
@@ -1477,7 +1512,7 @@ h3:hover {
 }
 
 .footer .subscirbe {
-    background-color: #f2ecec;
+    background-color: rgba(238, 233, 233, 0.784);
     text-align: center;
     display: flex;
     justify-content: center;
@@ -1656,11 +1691,12 @@ h3:hover {
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 650px) {
     .footer .subscirbe p {
         font-size: 35px;
         padding: 5px;
-        max-width: 250px;
+        max-width: 300px;
+        text-align: center;
     }
 
     .footer .subscirbe .sec {
@@ -1697,11 +1733,11 @@ h3:hover {
 @media (max-width: 480px) {
     .footer .subscirbe p {
         font-size: 30px;
-        padding: 5px;
+        padding: 5px 20px;
     }
 
     .footer .subscirbe .sec {
-        padding: 0 15px 15px;
+        padding: 0 20px 20px;
     }
 
     .footer .subscirbe .sec input {
@@ -1713,7 +1749,7 @@ h3:hover {
     }
 
     .footer .logo {
-        margin-top: 210px;
+        margin-top: 220px;
     }
 
     .footer .links ul li a {
