--- a/css/index.css
+++ b/css/index.css
@@ -1469,7 +1469,7 @@ h3:hover {
 /* start Sponsers Section */
 .sponsers .content{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(130px,200px));
+    grid-template-columns: repeat(auto-fill,minmax(130px,1fr));
     gap: 30px;
     margin-bottom: 200px;
     justify-content: space-between;
