--- a/css/index.css
+++ b/css/index.css
@@ -1744,6 +1744,10 @@ h3:hover {
 
     .footer .subscirbe .sec input {
         height: 50px;
+        padding-right: 20px;
+        padding-left: 10px;
+        text-align: left;
+        
     }
 
     .footer .subscirbe .sec .btn {
