--- a/css/index.css
+++ b/css/index.css
@@ -1337,22 +1337,32 @@ transform:rotate(360deg); */
     .container {
         width: 100%;
     }
-
+    
     .slider .slide.prev {
         transform: translateX(100%);
     }
-
+    
     .slider .slide img {
         width: 100%;
         height: 100%;
     }
-
+    
     .event-details-container {
         opacity: 0.9;
     }
-
+    
     .event-details-container:hover {
         opacity: 1;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .event-details-container .countdown .box .time {
+        font-weight: 600;
+        font-size: 26px;
+    }
+    .event-details-container .countdown .box .text {
+        font-weight: 400;
+        font-size: 17px;
     }
 }
 
