--- a/css/index.css
+++ b/css/index.css
@@ -154,7 +154,9 @@ nav ul {
 nav ul li {
     margin: 0 10px;
 }
-
+nav ul li:nth-child(4){
+    margin-right: 60px;
+}
 nav li a {
     position: relative;
     display: block;
@@ -1365,7 +1367,137 @@ transform:rotate(360deg); */
         font-size: 17px;
     }
 }
+/* Start speakers Section */
+.speakers{
+    padding: 60px 0;
+    background-color: var(--section-grey);
+}
+.speakers .content{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr)) ;
+    grid-gap: 30px;
+    margin-top: 80px;
+    position: relative;
+}
+.speakers .card{
+    background-color: white;
+    position: relative;
+}
+.speakers .social {
+    display: flex;
+    margin-bottom: 20px;
+    column-gap: 15px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
+    opacity: 0;
+    transition: 1s .2s linear ;
+}
 
+.speakers .ico {
+    color: white;
+    font-size: 18px;
+    opacity: 0.7;
+    transition: 0.4s;
+}
+
+.speakers .ico:hover {
+    background: -webkit-linear-gradient(230deg, #5181e9, #c02bc3);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 1;
+    transform: scale(1.25);
+}
+.speakers .card:hover .social {
+    opacity: 1;
+}
+
+.speakers .image{
+    overflow: hidden;
+    /* height: 295px; */
+    position: relative;
+}
+.speakers .layer{
+        position: absolute;
+        background-color: black;
+        height: 100%;
+        width: 0;
+        opacity: 0.4;
+        z-index: 1;
+        transition: .5s;
+}
+.speakers .time{
+    background-color: white;
+    color: black;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    padding: 8px;
+    border-radius: 8px;
+    z-index: 2;
+    transition: .5s;
+    opacity: .8;
+}
+.speakers .card:hover .time{
+    opacity: .1;
+}
+.speakers .time p{
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    font-weight: 600;
+}
+.speakers .text{
+    padding: 20px;
+    position: absolute;
+    bottom: 10px;
+    z-index: 2;
+    color: white;
+    /* display: none; */
+    opacity: 0;
+    transition: 1s .2s linear ;
+}
+.speakers .text h2{
+    font-size: 25px;
+    font-weight: 600;
+    margin: 0 10px;
+}
+.speakers .text p{
+    line-height: 1.5;
+    margin: 5px 10px;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.66);
+}
+.speakers .card img{
+    max-width: 100%;
+    transition-duration: 1.5s;
+    transition-timing-function: ease-in-out;
+    z-index: 0;
+}
+.speakers .card:hover .text{
+    opacity: 1;
+}
+.speakers .card:hover .social{
+    display: flex;
+}
+.speakers .card:hover .layer{
+    width: 100%;
+}
+.speakers .card:hover{
+    cursor: pointer;
+}
+.speakers .card:hover img{
+    transform: scale(1.2) translate(30px,20px);
+    z-index: 0;
+}
+@media (max-width:1150px) {
+    .speakers .content{
+        grid-template-columns: repeat(auto-fill,minmax(200px,1fr)) ;
+    }
+    
+}
+/* End speakers Section */
 .moataz_container {
     width: 100%;
     display: flex;
@@ -1494,11 +1626,12 @@ h3:hover {
     gap: 7px;
 }
 
-.row>div:hover {
-    img {
+.row>div img{
+    transition: 0.7s ease-in-out;
+    max-height: 100%;
+}
+.row>div img:hover {
         transform: scale(1.05);
-        transition-duration: 0.7s;
-    }
 }
 
 .three {
